# biofm-mini

./: .coverage  .coverage 2  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATASET_SHEET.md  Dockerfile.cpu  MODEL_CARD.md  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
artifacts/demo/: metrics.json  version.txt
biofm-mini/: CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
biofm-mini/configs/: default.yaml
biofm-mini/configs/data/: real.yaml  toy.yaml
biofm-mini/configs/eval/: knn.yaml  linear_probe.yaml
biofm-mini/configs/train/: clip.yaml  lora.yaml
biofm-mini/scripts/: embed.py  prep_data.py  train.py
biofm-mini/src/biofm/: __init__.py  datamodels.py
biofm-mini/src/biofm/dataio/: __init__.py  clinical.py  microscopy.py  scrna.py  toydata.py
biofm-mini/src/biofm/eval/: linear_probe.py  metrics.py
biofm-mini/src/biofm/models/: __init__.py  clip.py  lora.py
biofm-mini/src/biofm/preprocess/: __init__.py  microscopy_prep.py  scrna_prep.py
biofm-mini/src/biofm/training/: loop.py  utils.py
biofm-mini/src/biofm/utils/: embeddings.py  pipeline.py  registry.py
biofm-mini/tests/: test_datamodels.py  test_toydata.py
notebooks/: 01_data_validation.ipynb  02_pretraining_demo.ipynb  03_transfer_eval.ipynb  04_stats_primer.ipynb
scripts/: demo_end_to_end.py  embed.py  eval.py  prep_data.py
src/biofm/: __init__.py  _version.py  cli.py  configuration.py  datamodels.py  deps.py
src/biofm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/biofm/configs/: real.yaml  toy.yaml
src/biofm/dataio/: clinical.py  microscopy.py  scrna.py  toydata.py
src/biofm/eval/: __init__.py  linear_probe.py  metrics.py  plots.py
src/biofm/models/: clip.py  encoders.py  lora.py  projector.py
src/biofm/preprocess/: microscopy_prep.py  scrna_prep.py
src/biofm/training/: __init__.py  loop.py  utils.py
src/biofm/utils/: __init__.py  determinism.py  embeddings.py  pipeline.py  registry.py  seeds.py
tests/: test_artifacts.py  test_cli.py  test_clip_step.py  test_configuration.py  test_datamodels.py  test_determinism.py  test_endpoints.py  test_eval_metrics.py  test_metrics.py  test_pipeline.py  test_toydata.py
