[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "biofm"
dynamic = ["version"]
description = "Laptop-first multimodal foundation model mini-stack for microscopy, scRNA, and clinical data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Artemis Folle", email = "artemis@example.com" },
]
keywords = ["multimodal", "foundation model", "microscopy", "single-cell", "clinical"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.2,<2.4",
  "torchvision>=0.17,<0.19",
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pydantic>=2.5",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "typer>=0.9",
  "rich>=13.7",
  "tqdm>=4.66",
  "Pillow>=10.0",
  "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "coverage[toml]>=7.4",
  "ruff>=0.2",
  "black>=24.4",
  "isort>=5.12",
  "mypy>=1.8",
  "pre-commit>=3.6",
  "types-Pillow",
  "types-PyYAML",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
]
gpu = [
  "torch>=2.2,<2.4",
  "torchvision>=0.17,<0.19",
  "torchaudio>=2.2,<2.4",
]
viz = [
  "matplotlib>=3.8",
  "plotly>=5.18",
]
scanpy = [
  "scanpy>=1.9",
  "anndata>=0.9",
]

[project.urls]
Homepage = "https://github.com/altalanta/biofm-mini"
Documentation = "https://altalanta.github.io/biofm-mini"
"Bug Tracker" = "https://github.com/altalanta/biofm-mini/issues"

[project.scripts]
biofm = "biofm.cli:main_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["biofm*"]

[tool.setuptools.package-data]
biofm = ["py.typed", "configs/**/*.yaml"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
write_to = "src/biofm/_version.py"
write_to_template = """# Generated by setuptools_scm\n__version__ = \"{version}\"\n"""

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B905", "E203", "B008", "N812", "S311"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config --cov=biofm --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["biofm"]

disable_warnings = true

[tool.coverage.report]
exclude_also = [
  "if __name__ == '__main__':",
  "pragma: no cover",
]
precision = 2
fail_under = 90

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
show_error_codes = true
plugins = []
